# crabWURCS

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  regenerate_glycoshape_svgs.py  regenerate_glycoshape_svgs.rs
crabwurcs/: Cargo.toml
crabwurcs-cli/: Cargo.toml
crabwurcs-cli/src/: main.rs
crabwurcs-core/: Cargo.toml
crabwurcs-core/src/: error.rs  grammar.rs  lib.rs  model.rs  motif.rs  registry.rs
crabwurcs-core/tests/: extended_iupac_tests.rs  glycam_conversion_tests.rs  glycam_tests.rs  glycoshape_iupac_tests.rs  glycoshape_tests.rs  glycoshape_validation.rs  iupac_conversion_tests.rs  iupac_tests.rs  semantic_conversion_tests.rs  structural_notation_tests.rs
crabwurcs-iupac/: Cargo.toml
crabwurcs-iupac/src/: lib.rs
crabwurcs-mol/: Cargo.toml  README-BACKEND.md
crabwurcs-mol/data/: glycoshape_derived_notations.tsv
crabwurcs-mol/examples/: regenerate_canonical_index.rs
crabwurcs-mol/src/: construct.rs  lib.rs
crabwurcs-mol/tests/: chematic_corpus_tests.rs
crabwurcs-pdb/: Cargo.toml
crabwurcs-pdb/examples/: audit_glycoshape.rs
crabwurcs-pdb/src/: lib.rs
crabwurcs-snfg/: Cargo.toml
crabwurcs-snfg/data/: glycoshape_notations.tsv
crabwurcs-snfg/src/: lib.rs
crabwurcs/data/: README.md  glycoshape_canonical_smiles.tsv  glycoshape_notation_only.tsv
crabwurcs/src/: lib.rs
docs/: status.md
scripts/: regenerate_derived_molecular_corpus.sh
